added logs